--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body{
 
 nav{
     position: fixed;
-    top: 0;
-    left: 0;
+    top: -9px;
+    left: -10px;
     width: 100%;
     height: 100px;
     padding: 11px 24px;
@@ -16,8 +16,11 @@ nav{
 }
 
 .logo{
-    padding: 14px;
-    margin-left: 42px;
+    height: 150px;
+    width: 200px;
+    padding: 0px;
+    margin-left: 30px;
+    margin-top: -17px;
     height: 80%;
     float: left;
     background: none;
@@ -27,10 +30,11 @@ nav .logo{
     padding: 28px 0px;
     height: 80px;
     float: left;
-    font-size: 30px;
-    font-weight: bold;
+    font-size: 38px;
+    font-weight: 1000;
     text-transform: uppercase;
-    color: #f7d204 ;
+    font-family: Curlz MT, Harrington;
+    color: #f3f704 ;
 }
 
 nav ul{
@@ -72,7 +76,7 @@ nav ul li a:hover{
     left: 50%;
     transform: translate(-50%,-50%);
     width: 100%;
-    margin-top: 20px;
+    margin-top: 37px;
 
 }
 
@@ -251,7 +255,7 @@ nav ul li a:hover{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgb(5,56,56)); /*url(newbackgnd.jpeg);*/
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgb(5, 170, 156)); /*url(newbackgnd.jpeg);*/
     background-size: cover;
 }
 
@@ -419,6 +423,12 @@ nav ul li a:hover{
     text-align: center;
     font-size: 20px;
 
+}
+
+.menu-icon{
+    width: 28px;
+    margin-left: 20px;
+    display: none;
 }
 
 /*--------------media query for menu---------------------*/
